# nyoworks-framework

./: .env.example  .gitignore  .mcp.json  LICENSE  README.md  docker-compose.yml  nyoworks.config.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  setup.sh  tree.txt  tsconfig.json  turbo.json
.claude/: CLAUDE.md  settings.json
.claude/commands/: architect.md  backend.md  data.md  designer.md  devops.md  frontend.md  lead.md  qa.md  shared.md
apps/_templates/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/_templates/desktop/src-tauri/capabilities/: default.json
apps/_templates/desktop/src-tauri/src/: main.rs
apps/_templates/desktop/src-tauri/src/commands/: mod.rs  system.rs
apps/desktop/: .env.example  index.html  package.json
apps/mobile/: app.config.ts  metro.config.js  package.json  tsconfig.json
apps/server/: package.json
apps/web/: .env.example  package.json  tsconfig.json
cli/: nyoworks.py
config/: apps.yaml  features.yaml  product-types.yaml  stack.yaml
core/: index.ts
core/auth/: index.ts  jwt.ts  middleware.ts  password.ts
core/cache/: client.ts  helpers.ts  index.ts  keys.ts
core/database/: client.ts
core/i18n/: config.ts  index.ts
core/rbac/: index.ts  middleware.ts  permissions.ts
core/shared/: logger.ts  types.ts
core/theme/: index.ts  provider.tsx  variables.css
core/validators/: tenant.ts
docs/: FRAMEWORK-ANALYSIS-2026.md  UPDATE-PLAN-2026.md  VALIDATION-REPORT.md
mcp-server/: package.json  pnpm-lock.yaml  server.py.deprecated  vitest.config.ts
workflow/: phases.yaml  roles.yaml
(+146 files in other folders)
